syntax = "proto3";

option go_package = "github.com/sdslabs/katana/lib/foundry/protos/vmmanager";

package vmmanager;

service VMFoundry {
    rpc CreateCluster (ClusterRequest) returns (ClusterResponse) {}
    rpc DeleteCluster (ClusterID) returns (StatusResponse) {}
    rpc StartCluster (ClusterID) returns (StatusResponse) {}
    rpc StopCluster (ClusterID) returns (StatusResponse) {}
    rpc StartVM (VMID) returns (StatusResponse) {}
    rpc StopVM (VMID) returns (StatusResponse) {}
    rpc ClusterInfo (ClusterID) returns (ClusterResponse) {}
    rpc VMInfo (VMID) returns (VMResponse) {}
}

message ClusterRequest {
    int32 cpu = 1;
    int32 memory = 2;
}

message ClusterResponse {
    bytes data = 1;
}

message ClusterID {
    string id = 1;
}

message StatusResponse {
    bool success = 1;
}

message VMID {
    string id = 1;
}

message VMResponse {
    bytes data = 1;
}

